Minor tweaks to fix layout issues

--- a/src/Grid.css
+++ b/src/Grid.css
@@ -4,8 +4,7 @@
 
 #grid {
     max-width: 454px;
-    height: calc(100vw - 16px);
-    max-height: 454px;
+    min-height: 454px;
     border: 2px solid #000;
     display: grid;
     grid-template-rows: repeat(9, 1fr);
